# ai-taal-ecp

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: ecp0.yaml  ecp1.yaml  ecp2-control.yaml  ecp2-development.yaml  ecp2.yaml  ecp3-control.yaml  ecp3-development.yaml  ecp3.yaml  ecp4-control.yaml  ecp4-development.yaml  ecp4.yaml  ecp5-control.yaml  ecp5-development.yaml  ecp5.yaml  ecp6-development.yaml  ecp6.yaml  ecp7-b10-development.yaml  ecp7-b11-development.yaml  ecp7-b12-development.yaml  ecp7-b13-development.yaml  ecp7-b14-development.yaml  ecp7-b15-development.yaml  ecp7-b16-development.yaml  ecp7-b17-development.yaml  ecp7-b18-development.yaml  ecp7-b19-development.yaml  ecp7-b2-development.yaml  ecp7-b20-development.yaml  ecp7-b21-development.yaml  ecp7-b22-development.yaml  ecp7-b23-development.yaml  ecp7-b24-development.yaml  ecp7-b25-development.yaml  ecp7-b26-development.yaml  ecp7-b27-development.yaml  ecp7-b28-development.yaml  ecp7-b29-development.yaml  ecp7-b3-development.yaml  ecp7-b4-development.yaml  ecp7-b5-development.yaml  (+11 more)
docs/: AI_AGENT_START.md  development-log-ecp1.md  development-log-ecp2.md  development-log-ecp3.md  development-log-ecp4.md  development-log-ecp5.md  development-log-ecp6.md  development-log-ecp7.md  development-log-ecp8.md  ecp7-development-conclusion.md  experiment-template.md  onderzoeksopzet-ecp1.md  onderzoeksopzet-ecp2.md  onderzoeksopzet-ecp3.md  onderzoeksopzet-ecp4.md  onderzoeksopzet-ecp5.md  onderzoeksopzet-ecp6.md  onderzoeksopzet.md  ontwikkellog-ecp1.md  (+32 more)
(+63 files in other folders)
