[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-taal-ecp"
version = "0.1.0"
description = "Reproduceerbare experimenten met emergente AI-communicatie"
readme = "README.md"
license = "MIT"
authors = [{name = "Fatih Ligtvoet"}]
requires-python = ">=3.12,<3.14"
dependencies = [
  "jsonschema>=4.23,<5",
  "numpy>=2.1,<3",
  "PyYAML>=6.0,<7",
  "torch>=2.5,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
ecp0 = "ai_taal.cli:main"
ecp1 = "ai_taal.cli:main"
ecp2 = "ai_taal.cli:main"
ecp3 = "ai_taal.cli:main"
ecp4 = "ai_taal.cli:main"
ecp5 = "ai_taal.cli:main"
ecp6 = "ai_taal.cli:main"

[project.urls]
Repository = "https://github.com/FatosLocos/ai-taal-ecp"
Issues = "https://github.com/FatosLocos/ai-taal-ecp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
